--- a/index.html
+++ b/index.html
@@ -1,51 +1,54 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./asets/icono.png">
-  
+
   <title>Profile card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <link rel="stylesheet" href="./style.css">;
+  <link rel="stylesheet" href="./style/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
-  <div class="profile card">
-    <div class="profile card top">
-      <img src="./asets/mobile-design.jpg" alt="profile image">
+  <div class="profile-card">
+    <div class="profile-card-top">
+      <img src="./asets/image-victor.jpg" alt="profile image">
 
     </div>
-    <div class="profile card botton">
-      <div class="profile card botton__datos-perfil"></div>
-      <div class="profile card botton__datos-seguidores"></div>
-      <div>
-        <p>80k</p>
-        <p>Followers</p>
+    <div class="profile-card-botton">
+      <div class="profile-card botton__datos-perfil">
+        <div>
+          <span>Victor Crest</span>
+          <span>26</span>
+        </div>
+        <p>London</p>
       </div>
-      <div>
-        <p>803K</p>
-        <p>Likes</p>
-      </div>
-      <div>
-        <p>1.4K</p>
-        <p>Photos</p>
+
+      <div class="profile-card-bottom__datos-seguidores">
+        <div>
+          <p>80k</p>
+          <p>Followers</p>
+        </div>
+        <div>
+          <p>803K</p>
+          <p>Likes</p>
+        </div>
+        <div>
+          <p>1.4K</p>
+          <p>Photos</p>
+        </div>
       </div>
     </div>
   </div>
-  Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
 </body>
+
 </html>
