--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     </div>
     <div class="profile-card-botton">
-      <div class="profile-card botton__datos-perfil">
+      <div class="profile-card-bottom__datos-perfil">
         <div>
           <span>Victor Crest</span>
           <span>26</span>
