--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <link rel="stylesheet" href="./style/style.css">
+  <link rel="stylesheet" href="./style/desktop1440.css" media="screen and (min-width: 1440px)">
+  <link rel="stylesheet" href="./style/desktop1440.css" media="screen and (min-width: 1024px)">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
